# otc-pricing-mcp

./: .bandit  .gitignore  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  Dockerfile  EPIC_otc-pricing-mcp_1.md  README.md  SECURITY.md  otc-mcp-feature-requests.md  otc_price_api_probe.py  pyproject.toml  sbom.json  server.json
.github/workflows/: ci.yml  release.yml  security.yml  sync-docs.yml
data/: otc_docs.manifest.json
deploy/argocd/: application.yaml
deploy/kubernetes/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  poddisruptionbudget.yaml  service.yaml  servicemonitor.yaml
docs/: PLAN.md  api-quirks.md  architecture.md  catalog-inventory.md  ci-cd.md  deployment.md  grafana-dashboard.json  tool-surface.md
docs/submissions/: README.md  mcp-registry.md  mcpservers-org.md  otc-awesome-pr.md  pulsemcp.md
probe_results/: catalog_inventory.json  filter_test_apig_eu_ch2.json
scripts/: generate-sbom.sh  probe.py  sync_otc_docs.py
src/otc_pricing_mcp/: __init__.py  __main__.py  client.py  models.py  normalize.py  server.py
src/otc_pricing_mcp/observability/: __init__.py  context.py  http_server.py  logging.py  metrics.py
src/otc_pricing_mcp/tools/: __init__.py  discovery.py  docs.py  estimation.py  pricing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_live_api.py  test_mcp_conformance.py
tests/unit/: __init__.py  test_client.py  test_docs.py  test_extract.py  test_models.py  test_normalize.py  test_server_routing.py  test_tools.py
